--- a/practice class bootstrap/bootststrape.html/Assignment day 10/survey form/index.html
+++ b/practice class bootstrap/bootststrape.html/Assignment day 10/survey form/index.html
@@ -113,6 +113,8 @@
       <input type="radio" id="Others" name="gender" value="Others">
       <label for="Others">Excellent</label>
       <br />
+
+
       <label>Are you satisfied</label>
       <input type="radio" id="male" name="gender" value="Male">
       <label for="male">Good</label>
@@ -122,13 +124,14 @@
       <label for="Others">Excellent</label>
       <br />
         
-      <div class="form-check form">
+      <div class="form-check d-inline-block">
         <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
         <label class="form-check-label" for="inlineCheckbox1">1</label>
+        
+      </div>     
+      <div class="form-check d-inline-block">
         <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
         <label class="form-check-label" for="inlineCheckbox1">2</label>
-        <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-        <label class="form-check-label" for="inlineCheckbox1">3</label>
       </div>     
 
      </body>       
